--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="flex justify-between">
         <h1 class="font-serif text-3xl font-medium">Landing</h1>
         <a
-          href="https://twitter.com/victormustar"
+          href="https://github.com/gary149/landing-gradients"
           class="self-start px-3 py-2 leading-none text-gray-200 border border-gray-800 rounded-lg focus:outline-none focus:shadow-outline bg-gradient-to-b hover:from-indigo-500 from-gray-900 to-black"
         >
           Get this template
@@ -245,7 +245,7 @@
           </li>
           <li>
             <a
-              href="https://twitter.com/victormustar"
+              href="https://github.com/gary149/landing-gradients"
               class="self-start px-3 py-2 leading-none text-gray-200 border border-gray-800 rounded-lg focus:outline-none focus:shadow-outline bg-gradient-to-b hover:from-indigo-500 from-gray-900 to-black"
             >
               Get this template
